fix: build setting.